# hse-test-coin

./: .gitignore  README.md  hardhat.config.js  package-lock.json  package.json
client/web3-client/: Cargo.toml  sample_output.txt
client/web3-client/src/: main.rs
contracts/: AmogusToken.sol
scripts/: deploy.js
test/: AmogusToken.js
