[package]
name = "web3-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
ethers = "1.0.2"
tokio = { version= "1", features = ["full"] }
dotenv = "0.15.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }